Fix the implemention of the date
Signed-off-by: Ethan Dye <mrtops03@gmail.com>